Cleanup code by applying some idea inspection suggestions
See merge request main/Sumatra!2159

sumatra-commit: 974414fbbf225d7744eea1f494e4dd9ba1d6d78a