@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009 - 2025, DHBW Mannheim - TIGERs Mannheim
+ * Copyright (c) 2009 - 2026, DHBW Mannheim - TIGERs Mannheim
  */
 package edu.tigers.sumatra.gui.replay.view;
 
@@ -23,6 +23,7 @@ import java.awt.event.ActionListener;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
+import java.io.Serial;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -31,7 +32,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
 
 /**
@@ -40,6 +40,7 @@ import java.util.stream.Collectors;
 @SuppressWarnings("squid:S2250") // Collection methods with O(n) performance should be used carefully
 public class ReplayLoadMenu extends JMenu
 {
+	@Serial
 	private static final long serialVersionUID = 1L;
 	private static final Logger log = LogManager.getLogger(ReplayLoadMenu.class.getName());
 
@@ -60,7 +61,7 @@ public class ReplayLoadMenu extends JMenu
 			boolean dirCreated = path.mkdirs();
 			if (dirCreated)
 			{
-				log.debug("Created folders for persistencePath " + path);
+				log.debug("Created folders for persistencePath {}", path);
 			}
 		}
 		fileFilter = new RecordDbFilter();
@@ -107,7 +108,7 @@ public class ReplayLoadMenu extends JMenu
 				dirs = new ArrayList<>();
 			} else
 			{
-				dirs = Arrays.stream(files).sorted().collect(Collectors.toList());
+				dirs = Arrays.stream(files).sorted().toList();
 			}
 			if (!dirs.isEmpty())
 			{
@@ -313,7 +314,7 @@ public class ReplayLoadMenu extends JMenu
 			if (JOptionPane.showConfirmDialog(null, "Do you want to delete '" + filename + "'?", "Confirm deletion",
 					JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION)
 			{
-				log.info("Deleting '" + filename + "'...");
+				log.info("Deleting '{}'...", filename);
 				try
 				{
 					File file = new File(filename);
